# serde-bufferless

./: Cargo.toml  README.md
examples/: demo.rs
src/: lib.rs  private.rs
src/private/: flatten.rs
tests/: test.rs
