[package]
name = "serde-bufferless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
serde = { version = "1.0.136", default-features = false }

[dev-dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", default-features = false, features = [
    "std",
    "derive",
] }
anyhow = "1.0.56"
